<uk.ac.kent.jb509.shopper.utils.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/slider_panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/parent_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical" >

        <!-- Main Content -->

        <GridView
            android:id="@+id/categories_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:divider="@color/title_"
            android:gravity="center_horizontal|center_vertical"
            android:numColumns="1"
            android:textColor="@color/text"
            android:verticalSpacing="16dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/sliding_clickable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eee"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/num_items_desc"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:gravity="center|bottom"
            android:text="@string/slider_desc"
            android:textColor="@color/title_"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/num_items_in_basket"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:gravity="center|top"
            android:text="@string/slider_basket_num"
            android:textColor="@color/text"
            android:textSize="14sp" />

         <ListView
            android:id="@+id/shopping_list"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:paddingTop="8dp" />

        <uk.ac.kent.jb509.shopper.utils.AutoResizeTextView
            android:id="@+id/total_text_field"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:gravity="center_horizontal|center_vertical"
            android:padding="3dip"
            android:shadowColor="@color/black"
            android:shadowDx="+2"
            android:shadowDy="+2"
            android:shadowRadius="1"
            android:textColor="@color/text"
            android:textSize="24sp" />

        <!-- ListRow Left side Thumbnail image -->

        <LinearLayout
            android:id="@+id/thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:padding="3dip" >

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/product_cover_desc" />
        </LinearLayout>

        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/black"
            android:shadowDx="+2"
            android:shadowDy="+2"
            android:shadowRadius="1"
            android:textColor="#040404"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/productDesc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dip"
            android:textColor="#343434"
            android:textSize="12sp" />
    </LinearLayout>

</uk.ac.kent.jb509.shopper.utils.SlidingUpPanelLayout>